# yolo_onnx_ros

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  docker-compose.yml  inference.cpp  package.xml
.cmake/api/v1/reply/: cache-v2-5420b70bc6ffdffeee80.json  cmakeFiles-v1-e086848c5d3517286c5b.json  codemodel-v2-48929920607eb9bed755.json  index-2025-04-08T21-15-46-0907.json  target-Yolov8OnnxRuntimeCPPInference-1883f6945f60028a73f2.json
inc/: inference.h  yolo_inference.h
include/yolo_onnx_ros/: yolo_inference.h
src/: inference.cpp  main.cpp  yolo_inference.cpp
test/: tst_yolo_test.cpp  yolo_test.cpp
